Fix : table 오더 리스트 해결